--- a/style.css
+++ b/style.css
@@ -1,74 +1,66 @@
-/* button {
+button {
     border: none;
     border-radius: 100%;
     width: 100px;
     height: 100px;
 }
 
-img {
-    width: 70%;
-    margin: 1em;
-    filter: grayscale(100%);
-    transition: .5s;
+h1 {
+    display: flex;
+    justify-content: center;
 }
 
-img:hover {
-    filter: grayscale(0%);
-    transform: scale(1.1);
-}
-
-svg {
-    cursor: pointer;
-}
 
 .galeria {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-} */
-
-a{
-    cursor: pointer;
+    align-items: center;
 }
 
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
 
 .gallery img {
-    width: 200px;
-    height: 200px;
-    margin: 10px;
+    width: 30%;
     cursor: pointer;
 }
+
+/* Estilos del modal */
+
 
 .modal {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 60px;
-    left: 0;
-    top: 0;
+    left: 0%;
+    top: 0%;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .modal-content {
     margin: auto;
-    display: block;
+    display: flex;
+    left: 20%;
+    width: 80%;
     max-width: 800px;
-    max-height: 600px;
+    max-height: 80%;
 }
+
 
 .close {
     color: #fff;
-    position: absolute;
-    top: 10px;
-    right: 25px;
-    font-size: 35px;
+    font-size: 30px;
     font-weight: bold;
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    cursor: pointer;
+}
+
+
+.flechas img {
+    display: flex;
+    justify-content: space-between;
     cursor: pointer;
 }
